[gd_scene load_steps=7 format=2]

[ext_resource path="res://framework/resources/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://framework/resources/fonts/m3x6/pixel_32.tres" type="FontFile" id=2]
[ext_resource path="res://framework/ui/menus/leaderboard/leaderboard.gd" type="Script" id=3]
[ext_resource path="res://framework/ui/menus/leaderboard/LeaderboardScoreLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://framework/ui/modules/menu_button/MenuButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://framework/ui/modules/loading_label/LoadingLabel.tscn" type="PackedScene" id=6]

[node name="Leaderboard" type="CanvasLayer"]
script = ExtResource( 3 )
LeaderboardScoreLabel = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
offset_top = 16.0
offset_right = 320.0
offset_bottom = 224.0
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
offset_left = 102.0
offset_right = 218.0
offset_bottom = 12.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource( 2 )
text = "LEADERBOARD :^)"

[node name="LoadingLabel" parent="MarginContainer/VBoxContainer" instance=ExtResource( 6 )]
offset_left = 126.0
offset_top = 28.0
offset_right = 194.0
offset_bottom = 76.0
custom_minimum_size = Vector2( 0, 48 )
size_flags_horizontal = 4

[node name="LabelContainer" parent="MarginContainer/VBoxContainer/LoadingLabel" index="0"]
offset_right = 68.0
offset_bottom = 48.0

[node name="Label" parent="MarginContainer/VBoxContainer/LoadingLabel/LabelContainer" index="0"]
offset_left = 6.0
offset_top = 18.0
offset_right = 62.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource( 2 )

[node name="Label2" parent="MarginContainer/VBoxContainer/LoadingLabel/LabelContainer" index="1"]
offset_left = 4.0
offset_top = 18.0
offset_right = 64.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource( 2 )

[node name="Label3" parent="MarginContainer/VBoxContainer/LoadingLabel/LabelContainer" index="2"]
offset_left = 2.0
offset_top = 18.0
offset_right = 66.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource( 2 )

[node name="Label4" parent="MarginContainer/VBoxContainer/LoadingLabel/LabelContainer" index="3"]
offset_top = 18.0
offset_right = 68.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource( 2 )

[node name="ScoresContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
offset_left = 100.0
offset_top = 92.0
offset_right = 220.0
offset_bottom = 92.0
custom_minimum_size = Vector2( 120, 0 )
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
offset_left = 135.0
offset_top = 198.0
offset_right = 185.0
offset_bottom = 208.0
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_constants/separation = 6

[node name="BackButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
offset_right = 16.0
offset_bottom = 10.0
size_flags_horizontal = 4
size_flags_vertical = 8
text = "BACK"

[node name="RefreshButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
offset_left = 22.0
offset_right = 50.0
offset_bottom = 10.0
size_flags_horizontal = 4
size_flags_vertical = 8
text = "REFRESH"

[editable path="MarginContainer/VBoxContainer/LoadingLabel"]
